# Corona_analyzer

./: ISO_Data.csv  main.py  nohup.out  pyproject.toml
