[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Ebrathul <Ebrithil384@hotmail.de>"]
description = ""
name = "coronaanalyzer-1"
version = "0.1.0"
[tool.poetry.dependencies]
pandas = "^1.0"
python = "^3.7"
pycountry = "^19.8"
plotly = "^4.6"
[tool.poetry.dev-dependencies]
